--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "set NODE_ENV=development&& electron .",
     "build:win": "electron-builder --win --x64",
     "build:mac": "electron-builder --mac",
-    "build:linux": "electron-builder --linux"
+    "build:linux": "electron-builder --linux",
+    "registry:start": "node tools/local-servers-registry/server.js"
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
