add Defender/SmartScreen trust notes across README, release notes and workflow template

--- a/.github/workflows/release-crossplatform.yml
+++ b/.github/workflows/release-crossplatform.yml
@@ -117,9 +117,17 @@ jobs:
             - Linux: `.AppImage`
             - macOS: `.dmg` / `.zip`
 
-            ### 🔐 Проверка подлинности
+            ### 🛡 Windows Defender / SmartScreen
+            Иногда Windows может предупреждать при запуске unsigned-сборок.
+            Обычно это связано с отсутствием коммерческой цифровой подписи и низкой репутацией нового файла, а не с подтверждённым заражением.
+
+            Что делать:
+            1) скачивать только из официального Releases,
+            2) сверять SHA256,
+            3) при необходимости дополнительно проверять файл в VirusTotal.
+
+            ### 🔐 Проверка целостности
             - В релизе есть файлы `SHA256SUMS-*.txt`
-            - Сверьте SHA256 перед запуском
 
             ```powershell
             Get-FileHash .\NocLauncher-<version>-windows-x64.exe -Algorithm SHA256
