prepare v1.0.6 release metadata, windows ico icon and release notes

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "assets/icon.png"
+      "icon": "assets/icon.ico"
     },
     "linux": {
       "target": [
